--- a/src/App.css
+++ b/src/App.css
@@ -11,12 +11,12 @@
   height: 100vh;
   background-color: #fff;
   display: flex;
-  justify-content: center;
+  align-items: center;
+  flex-direction: column;
   margin-top: 50px;
 }
 
 .nav {
-  border: 1px solid red;
   width: 736px;
   height: 64px;
   flex-shrink: 0;
@@ -50,4 +50,30 @@
   height: 30px;
   color: #757575;
   font-size: 20px;
+}
+
+.search-bar {
+  width: 736px;
+  height: 64px;
+  flex-shrink: 0;
+  border-radius: 16px;
+  background-color: #f4f4f4;
+  margin-top: 40px;
+  display: flex;
+  align-items: center;
+}
+
+.search-field {
+  width: 650px;
+  height: 50px;
+  margin-left: 15px;
+  background-color: #f4f4f4;
+  border: none;
+  outline: none;
+  font-size: x-large;
+  font-weight: bold;
+}
+
+.search-icon {
+  padding: 15px;
 }
