--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,20 @@
 /* font-family: 'Lora', serif; */
 /* font-family: 'Inconsolata', monospace; */
 
+#light {
+  background-color: #fff;
+  transition: background-color 0.2s ease-out;
+}
+
+#dark {
+  background: #050505;
+  transition: background-color 0.2s ease-in;
+  padding: 0;
+  margin: 0;
+  height: 100%;
+  width: 100%;
+}
+
 .container {
   width: 100%;
   height: 100%;
@@ -41,6 +55,11 @@
   background-color: #fff;
 }
 
+#dark .font-type {
+  color: #fff;
+  background-color: #000;
+}
+
 .toggle {
   margin-left: auto;
   display: flex;
@@ -48,10 +67,24 @@
 }
 
 .toggle-icon {
-  width: 70px;
-  height: 30px;
+  width: 40px;
+  height: 25px;
   color: #757575;
-  font-size: 20px;
+  font-size: 30px;
+  border: none;
+  background-color: transparent;
+}
+
+#dark .toggle-icon {
+  color: #A445ED;
+} 
+
+.moon-icon {
+  fill: #757575;
+}
+
+#dark .moon-icon {
+  fill: #A445ED;
 }
 
 .search-bar {
@@ -65,6 +98,10 @@
   align-items: center;
 }
 
+#dark .search-bar{
+  background-color: #1F1F1F;
+}
+
 .search-field {
   width: 650px;
   height: 50px;
@@ -76,9 +113,20 @@
   font-weight: bold;
 }
 
+#dark .search-field{
+  background-color: #1F1F1F;
+  color: #fff;
+  
+
+}
+
 .search-bar button {
   border: none;
   cursor: pointer;
+}
+
+#dark .search-bar button{
+  background-color: #1F1F1F;
 }
 
 .search-icon {
@@ -109,6 +157,10 @@
   font-weight: 700;
   margin-top: 0%;
   margin-bottom: 0%;
+}
+
+#dark .heading {
+  color: #fff;
 }
 
 .speech {
@@ -148,9 +200,19 @@
   line-height: normal;
 }
 
+#dark .noun p {
+  color: #fff;
+}
+
 .noun hr {
   width: 656px;
   background-color: #e9e9e9;
+}
+
+#dark .noun hr {
+  background-color: #3A3A3A;
+  height: 1px;
+  border: none;
 }
 
 .meaning-section h4 {
@@ -167,6 +229,14 @@
   font-weight: 400;
   line-height: 24px;
   margin-bottom: 10px;
+}
+
+#dark .meaning-section ul li {
+  color: #fff;
+}
+
+#dark .meaning-section ul li::marker {
+color: #A445ED;
 }
 
 .synonyms {
@@ -203,9 +273,19 @@
   font-weight: 700;
 }
 
+#dark .verb h4 {
+  color: #fff;
+}
+
 .verb hr {
   width: 656px;
   background-color: #e9e9e9;
+}
+
+#dark .verb hr {
+  background-color: #3A3A3A;
+  height: 1px;
+  border: none;
 }
 
 .verb-meaning p {
@@ -223,12 +303,26 @@
   line-height: 24px;
 }
 
+#dark .verb-meaning ul li {
+  color: #fff;
+}
+
+#dark .verb-meaning ul li::marker {
+  color: #A445ED;
+  }
+
 .verb-meaning ul > p {
   color: #757575;
   font-family: Inter;
   font-size: 18px;
   font-weight: 400;
   line-height: 24px;
+}
+
+#dark .cross-line {
+  background-color: #3A3A3A;
+  height: 1px;
+  border: none;
 }
 
 .footer {
@@ -247,6 +341,10 @@
 .footer a {
   color: #2D2D2D;
   margin-left: 20px;
+}
+
+#dark .footer a {
+  color: #fff;
 }
 
 .footer img {
