--- a/src/App.css
+++ b/src/App.css
@@ -53,6 +53,7 @@
   border: none;
   outline: none;
   background-color: #fff;
+  cursor: pointer;
 }
 
 #dark .font-type {
@@ -73,6 +74,7 @@
   font-size: 30px;
   border: none;
   background-color: transparent;
+  cursor: pointer;
 }
 
 #dark .toggle-icon {
@@ -173,11 +175,6 @@
 
 .play-icon {
   margin-top: 25px;
-}
-
-.play-icon button {
-  border: none;
-  background-color: #fff;
   cursor: pointer;
 }
 
