--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,8 @@
   transition: background-color 0.2s ease-in;
   padding: 0;
   margin: 0;
-  height: 100%;
+  /* height: 100vh; */
+  min-height: 100vh;
   width: 100%;
 }
 
@@ -79,15 +80,15 @@
 }
 
 #dark .toggle-icon {
-  color: #A445ED;
-} 
+  color: #a445ed;
+}
 
 .moon-icon {
   fill: #757575;
 }
 
 #dark .moon-icon {
-  fill: #A445ED;
+  fill: #a445ed;
 }
 
 .search-bar {
@@ -101,8 +102,8 @@
   align-items: center;
 }
 
-#dark .search-bar{
-  background-color: #1F1F1F;
+#dark .search-bar {
+  background-color: #1f1f1f;
 }
 
 .search-field {
@@ -116,11 +117,9 @@
   font-weight: bold;
 }
 
-#dark .search-field{
-  background-color: #1F1F1F;
+#dark .search-field {
+  background-color: #1f1f1f;
   color: #fff;
-  
-
 }
 
 .search-bar button {
@@ -128,8 +127,8 @@
   cursor: pointer;
 }
 
-#dark .search-bar button{
-  background-color: #1F1F1F;
+#dark .search-bar button {
+  background-color: #1f1f1f;
 }
 
 .search-icon {
@@ -206,7 +205,7 @@
 }
 
 #dark .noun hr {
-  background-color: #3A3A3A;
+  background-color: #3a3a3a;
   height: 1px;
   border: none;
 }
@@ -230,7 +229,7 @@
 }
 
 #dark .meaning-section ul li::marker {
-color: #A445ED;
+  color: #a445ed;
 }
 
 .synonyms {
@@ -275,7 +274,7 @@ color: #A445ED;
 }
 
 #dark .verb hr {
-  background-color: #3A3A3A;
+  background-color: #3a3a3a;
   height: 1px;
   border: none;
 }
@@ -298,8 +297,8 @@ color: #A445ED;
 }
 
 #dark .verb-meaning ul li::marker {
-  color: #A445ED;
-  }
+  color: #a445ed;
+}
 
 .verb-meaning ul > p {
   color: #757575;
@@ -309,7 +308,7 @@ color: #A445ED;
 }
 
 #dark .cross-line {
-  background-color: #3A3A3A;
+  background-color: #3a3a3a;
   height: 1px;
   border: none;
 }
@@ -319,7 +318,8 @@ color: #A445ED;
   align-items: center;
 }
 
-.footer p, a {
+.footer p,
+a {
   color: #757575;
   font-size: 14px;
   font-weight: 400;
@@ -327,7 +327,7 @@ color: #A445ED;
 }
 
 .footer a {
-  color: #2D2D2D;
+  color: #2d2d2d;
   margin-left: 20px;
 }
 
@@ -337,6 +337,6 @@ color: #A445ED;
 
 .footer img {
   width: 12px;
-height: 12px;
-flex-shrink: 0;
+  height: 12px;
+  flex-shrink: 0;
 }
